--- a/css/style.css
+++ b/css/style.css
@@ -368,8 +368,8 @@ input[type="checkbox"]:checked{
     }
 
     .step05-bg {
-        background:url("/images/payment.jpg");
-        background-position: center;
+        background:url("/images/mb-step-05.png");
+        background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
     }
@@ -389,6 +389,13 @@ input[type="checkbox"]:checked{
 
     .step08-bg {
         background:url("/images/mb-step-08.png");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .step09-bg {
+        background:url("/images/mb-step-09.png");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -563,8 +570,8 @@ input[type="checkbox"]:checked{
     }
 
     .step05-bg {
-        background:url("/images/payment.jpg");
-        background-position: center;
+        background:url("/images/mb-step-05.png");
+        background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
     }
