--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@
     color: #fff;
     margin-top: 20px;
     opacity: 0.8;
-    transition: .4s;b  
+    transition: .4s;
     width: 200px;
 }
 
